syntax = "proto3";

package weather;

service WeatherService {
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  string city = 1;
}

message WeatherResponse {
  double temperature = 1;
  string description = 2;
  int32 humidity = 3;
  double windSpeed = 4;
  double pressure = 5;
}